tiger/tests/error/assign.tig
let function test(): int = 0

    class Vehicle extends Object {
        method move(x: int) =
            print("move")
    }

    var v := new Vehicle
in
    v.move(10) := 10
end
